글 수정 시 insert 되는 에러 수정